# TestLog4Qt

./: CMakeLists.txt  README.md  main.cpp
Log4QtBin/lib/: log4qt.lib
Log4QtBin/lib/cmake/Log4Qt/: Log4QtTargets-release.cmake  Log4QtTargets.cmake
